comment-mail-pro/client-s/css/menu-pages.css
/* ... */
.comment-mail-menu-page button:hover
{
	background : #307D27;
}
.comment-mail-menu-page button:active
{
	-webkit-transform : scale(0.98, 0.98);
	transform				 : scale(0.98, 0.98);
}
.comment-mail-menu-page .pmp-pro-preview
{
	opacity : 0.5;
}
.comment-mail-menu-page .pmp-clearfix:before,
.comment-mail-menu-page .pmp-clearfix:after
{
	display : table;
	content : ' ';
}
.comment-mail-menu-page .pmp-clearfix:after
{
	clear : both;
}
.comment-mail-menu-page > .pmp-note,
.comment-mail-menu-page > * > .pmp-note
{
	margin : -1em 0 2em 0;
}
/*
Menu page heading styles.
*/
.comment-mail-menu-page .pmp-heading
{
	padding-bottom : 1em;
	margin-bottom	: 2em;
	position			 : relative;
}
.comment-mail-menu-page .pmp-heading::after
{
	content		: '';
	bottom		 : 0;
	left			 : 0;
	position	 : absolute;

	width			: 100%;
	height		 : .25em;

	background : linear-gradient(to left, rgba(204, 204, 204, 0), rgba(204, 204, 204, 0.75), rgba(204, 204, 204, 0));
}
.comment-mail-menu-page .pmp-heading img.pmp-logo-icon
{
	width	: 400px;
	margin : 0 0 1em .5em;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-links a
{
	text-decoration : none;
	text-align			: center;
	display				 : inline-block;

	margin					: 0;
	border-radius	 : 4px;
	background			: transparent;
	padding				 : .25em .5em .25em .5em;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-links a.pmp-active
{
	font-weight : bold;
	color			 : #307D27;
	background	: #FFFFFF;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-links a:first-child
{
	margin-left : 0;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-links a:last-child
{
	margin-right : 0;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-links a > .pmp-blink
{
	font-size : 80%;
	display	 : block;
	margin		: .25em 0 0 0;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-options
{
	float: right;
	clear: right;
	margin: 1em 0 0 0;
	text-align: center;
}
.comment-mail-menu-page .pmp-heading .pmp-heading-options a
{
	line-height: 1.5em;
	text-decoration: none;
	margin: 0 .5em 0 .5em;
	display: inline-block;
}
.comment-mail-menu-page .pmp-heading .pmp-version
{
	float: right;
	clear: right;
	margin: 0.5em 0 0 0;
	text-align: center;
}
.comment-mail-menu-page .pmp-heading .plugin-menu-page-restore-defaults
{
	float: right;
	margin: 0 1em 0 0;
}

/*
Menu page body styles.
*/
.comment-mail-menu-page .pmp-body .pmp-all-panel-togglers
{
	outline	 : none;
	float		 : right;
	font-size : 300%;
	margin		: 0 0 0 2em;

	z-index	 : 1;
	position	: relative;
}
.comment-mail-menu-page .pmp-body .pmp-template-types a
{
	opacity				 : 0.5;
	border-radius	 : 4px;
	text-decoration : none;
	padding				 : .1em .25em .1em .25em;
}
.comment-mail-menu-page .pmp-body .pmp-template-types a:hover,
.comment-mail-menu-page .pmp-body .pmp-template-types a.pmp-active
{
	opacity : 1;
}
.comment-mail-menu-page .pmp-body .pmp-template-types a.pmp-active
{
	font-weight : bold;
	color			 : #307D27;
	background	: #FFFFFF;
}
/*
Menu page section heading styles.
*/
.comment-mail-menu-page .pmp-section-heading
{
	margin : 1em 0 1em 0;
}
.comment-mail-menu-page .pmp-section-heading > small
{
	font-size	: 65%;
	opacity		: 0.5;
	font-style : italic;
	display		: block;
	margin		 : .25em 0 0 0 !important;
}
/*
Menu page panel styles.
*/
.comment-mail-menu-page .pmp-panel
{
	margin : 1em 0 1em 0;
}
.comment-mail-menu-page .pmp-panel:first-child
{
	margin-top : 0;
}
.comment-mail-menu-page .pmp-panel-heading
{
	display						 : block;
	text-decoration		 : none;

	padding						 : .5em;
	font-size					 : 150%;
	font-weight				 : bold;
	background					: #346098;
	color							 : #EEEEEE !important;

	border-radius			 : 4px;
	box-shadow					: 0 2px 2px 0 rgba(0, 0, 0, 0.25);

	cursor							: pointer;
	-webkit-user-select : none;
	-moz-user-select		: none;
	user-select				 : none;
}
.comment-mail-menu-page .pmp-panel-heading:hover
{
	background : #142D4D;
	color			: #FFFFFF !important;
}
.comment-mail-menu-page .pmp-panel-heading.open
{
	background : #307D27;
	color			: #FFFFFF !important;
}
.comment-mail-menu-page .pmp-panel-heading:after
{
	font-size	 : 80%;
	content		 : '\f078';
	font-weight : normal;
	font-family : 'FontAwesome';

	float			 : right;
	margin			: 0 0 0 .5em;
	display		 : inline-block;
}
.comment-mail-menu-page .pmp-panel-heading.open:after
{
	content : '\f077';
}
.comment-mail-menu-page .pmp-pro-preview .pmp-panel-heading:after
{
	font-variant : small-caps !important;
	font-family	: sans-serif !important;
	content			: 'pro version only' !important;
}
.comment-mail-menu-page-area .pmp-panel-heading-note
{
	font-size	: 70%;
	opacity		: 0.5;
	font-style : italic;
	margin		 : 0 0 0 .5em;
	display		: inline-block;
}
.comment-mail-menu-page .pmp-panel-body
{
	width											: 99%;
	margin										 : 0 auto 0 auto;
	box-sizing								 : border-box;

	display										: none;

	padding										: 1em;
	color											: #333333;
	background								 : #FFFFFF;

	border-bottom-left-radius	: 4px;
	border-bottom-right-radius : 4px;

	box-shadow								 : 0 1px 1px 0 rgba(0, 0, 0, 0.5), 0 3px 1px -1px rgba(0, 0, 0, 0.25) inset;
}
.comment-mail-menu-page .pmp-panel-body.open
{
	display : block;
}
.comment-mail-menu-page .pmp-panel-body h3
{
	margin : 0 0 1em 0;
}
.comment-mail-menu-page .pmp-panel-body h3:first-child
{
	margin-top : 0;
}
.comment-mail-menu-page .pmp-panel-body h3 + p
{
	margin-top : 0;
}
.comment-mail-menu-page .pmp-panel-body .pmp-note
{
	padding	 : 5px;
	font-size : inherit;
	margin		: 1em 0 1em 0;
}
.comment-mail-menu-page .pmp-panel-body .pmp-note.pmp-max-width
{
	display : table;
}
.comment-mail-menu-page .pmp-panel-body .pmp-import-iframe-output
{
	display			 : block;

	width				 : 100%;
	height				: 75px;
	box-sizing		: border-box;

	padding			 : 0;
	margin				: 1em 0 1em 0;

	border-radius : 4px;
	background		: transparent;
	border				: 1px dashed #CCCCCC;
}
/*
Menu page save button styles.
*/
.comment-mail-menu-page .pmp-save
{
	margin-top	: 2em;
	padding-top : 1em;
	position		: relative;
}
/* ... */

